...
    private func proceedToResultOfTheGame() {
        if let statisticService = statisticService {
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            let dateAndTime = statisticService.bestGame.date.dateTimeString

            let resultOfTheGame = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                message:
                    """
                    Ваш результат: \(correctAnswers)/\(questionsAmount)
                    Количество сыгранных квизов: \(statisticService.gamesCount)
                    Рекорд: \(statisticService.bestGame.correct)/\(questionsAmount) (\(dateAndTime))
                    Средняя точность: \(statisticService.totalAccuracy.myOwnRounded)%
...
